# Stkn_Alg_Second_Lab

./: .gitignore  CMakeLists.txt  README.md  base64.cpp  first  main.cpp  stop.cpp  stop.h  stop.hpp  test.txt  test2.txt
include/: base64.hpp  main.cpp  stop.hpp
src/: base64.cpp  main.cpp  stop.cpp
tests/: tests.cpp
